iOS OTP Message implementation

--- a/SendAndReceiveSMS/SendAndReceiveSMS.iOS/SendAndReceiveSMS.iOS.csproj
+++ b/SendAndReceiveSMS/SendAndReceiveSMS.iOS/SendAndReceiveSMS.iOS.csproj
@@ -90,6 +90,7 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CustomRenderer\OTPAutoFillControlRenderer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Receivers\SendSms.cs" />
